# curator

./: .env.example  .gitignore  .pylintrc  Dockerfile  cur_tree.txt  curatortree.txt  docker-compose.yml  go.sh  h.txt  projectstree.txt  pyproject.toml  stop.sh  ~curator-test.txt
.doc-gen/: check-report.txt  ignore-patterns.txt  manifest.fletch  manifest.yml
.doc-gen/backups/: ignore-patterns-1782241726.txt
.doc-gen/manifest-backups/: 20260412-143431-manifest.yml  20260413-153040-manifest.yml  20260416-104440-manifest.yml  20260416-110019-manifest.yml  20260419-145756-manifest.yml  20260421-090800-manifest.yml  20260422-072537-manifest.yml  20260422-124932-manifest.yml  20260629-180706-manifest.yml  20260629-184522-manifest.yml
.doc-gen/output/: .env.example.md  .gitignore.md  2  Dockerfile.md  README.md.md  cur_tree.txt.md  curatortree.txt.md  docker-compose.yml.md  go.sh.md  h.txt.md  project-tree.txt  projectstree.txt.md  pyproject.toml.md
docs/: curator_architecture.mmd  project-structure.md
docs/Testing/: curator_ui_checklist.xlsx  integration_tests.md
docs/change/: CHANGEDOC_CREW_PY_CONTACTS_ORGANIZATIONS_ROUTES.md  CHANGEDOC_CREW_PY_SPLIT.md  CHANGEDOC_DETAIL_PANEL_AUTO_CLOSE_ON_SAVE.md  CONTACTS_TWO_PANEL.md  CURATOR_PHASE1_COMPLETE_HANDOFF.md  CURATOR_V2_HANDOFF_2026-06-23.md  DATASHEET_ALL_FIXES.md  DATASHEET_IMPLEMENTATION.md  INLINE_EDIT_IMPLEMENTATION.md  PHASE1_FIXES.md  captain_projects_dry_refactor.md  curator_handoff_2026-06-28.md  phase2_migration (1).md  rename_schema_contacts_to_identity.md
docs/changedocs/: DEFERRED.md
docs/design/: CURATOR_V2_PHASE1_REVISED.md  curator_architecture.mmd  curator_current_state.md  curator_database_reference.md  curator_dev_utils_integration.md  curator_project_structure.md  curator_roadmap.md  curator_test_suite_guide.md  curator_v2_repo_structure.md  curator_v2_schema_design.md  detail_panel_architecture.md  detail_panel_design.md  docstring_generator_workflow.mmd  login_design.md  project_templates_design.md
docs/dev/: Nav_CODE_CHANGES.md  curator_ui_checklist.xlsx
docs/roadmap/: CONFIGURABLE_LANDING_CARDS_DESIGN.md  companion_app_design_notes.md
scripts/: fake_contacts.py  start.sh
src/curator/: __init__.py  config.py  exceptions.py  formkit.py
static/: curator.css
tests/: __init__.py  conftest.py  repro.py
(+228 files in other folders)
